# coralmicro

./: .gitmodules  setup.sh
examples/: CMakeLists.txt
examples/mediapipe/: CMakeLists.txt  face_detect_mediapipe.cc  hand_tracking.cc
examples/mediapipe_face_detect/: face_detect_mediapipe.cc  face_detect_mediapipe_utils.h
examples/mediapipe_hand_track/: CMakeLists.txt  hand_track_mediapipe.cc
examples/tflm_mediapipe_m7/: CMakeLists.txt  main_functions.cc
libs/tensorflow/: detection.cc
models/: hand_track_edgetpu.tflite
scripts/: requirements.txt
